@@ -81,13 +81,13 @@ int truncate(const char*, uint32_t);
 
 /// Guess about GCC atomic operations
 #if !defined(HAVE_GCC_ATOMIC32) && defined(WITHOUT_FASTBIT_CONFIG_H)
-#if __GNUC__+0 >= 4 && !defined(__CYGWIN__) && !defined(__PATHCC__) && !defined(__APPLE__)
+#if __GNUC__+0 >= 4 && defined(LINUX)
 #define HAVE_GCC_ATOMIC32 2
 #endif
 #endif
 #if !defined(HAVE_GCC_ATOMIC64) && defined(WITHOUT_FASTBIT_CONFIG_H)
 #if defined(__IA64__) || defined(__x86_64__) || defined(__ppc64__)
-#if __GNUC__+0 >= 4 && !defined(__CYGWIN__) && !defined(__PATHCC__) && !defined(__APPLE__)
+#if __GNUC__+0 >= 4 && defined(LINUX)
 #define HAVE_GCC_ATOMIC64 2
 #endif
 #endif
